# project2

./: CMakeLists.txt  functions.c  functions.h  heat.c  heat_mpi.cxx
